fix: redirect stripping auth headers

--- a/.env.example
+++ b/.env.example
@@ -62,7 +62,7 @@ TAVILY_API_KEY=
 # Optional: Seedstr Platform
 # ===========================================
 # Seedstr API base URL (change for development)
-SEEDSTR_API_URL=https://seedstr.io/api/v1
+SEEDSTR_API_URL=https://www.seedstr.io/api/v1
 
 # ===========================================
 # Optional: Logging
