--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "start": "tsx src/index.ts",
+    "start:built": "node dist/index.js",
     "cli": "tsx src/cli/index.ts",
     "register": "tsx src/cli/index.ts register",
     "verify": "tsx src/cli/index.ts verify",
