Refactor LLM integration: switch to direct OpenAI and Anthropic APIs, update configuration for multiple providers, and implement per-step model selection. Update .env.example and related files for new API keys and models.

--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "ai",
     "agent",
     "seedstr",
-    "openrouter",
+    "openai",
+    "anthropic",
     "llm",
     "tool-calling"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@openrouter/ai-sdk-provider": "^0.4.3",
-    "ai": "^4.1.0",
+    "@ai-sdk/anthropic": "^3.0.50",
+    "@ai-sdk/openai": "^3.0.37",
+    "ai": "^6.0.105",
     "archiver": "^7.0.1",
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
