--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,34 @@
 # Copy this file to .env and fill in your values
 
 # ===========================================
-# Required: OpenRouter API Key
+# Required: LLM API Keys (direct OpenAI and/or Anthropic — no OpenRouter)
 # ===========================================
-# Get your API key at: https://openrouter.ai/keys
-OPENROUTER_API_KEY=sk-or-v1-your-api-key-here
+# At least one provider key is required. Set PRIMARY_PROVIDER to choose which to use by default.
+
+# OpenAI API key — https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+
+# Anthropic API key — https://console.anthropic.com/
+ANTHROPIC_API_KEY=
+
+# Which provider to use: "openai" or "anthropic" (default: anthropic)
+PRIMARY_PROVIDER=anthropic
+
+# Model per provider (optional; defaults shown)
+OPENAI_MODEL=gpt-4o
+ANTHROPIC_MODEL=claude-sonnet-4-20250514
+
+# Pipeline per-step models (used by planner → builder → verifier when implemented)
+# Use model IDs that match the provider (claude-* = Anthropic, gpt-* = OpenAI). Requires the corresponding API key.
+PLANNER_MODEL=claude-sonnet-4.6
+BUILDER_MODEL=claude-opus-4.6
+VERIFIER_MODEL=gpt-5.3-codex
+
+# Maximum tokens to generate per response
+MAX_TOKENS=4096
+
+# Temperature for response generation (0.0 - 2.0)
+TEMPERATURE=0.7
 
 # ===========================================
 # Required: Solana Wallet Address
@@ -20,19 +44,6 @@ SOLANA_WALLET_ADDRESS=YourSolanaWalletAddressHere
 # ===========================================
 # This will be populated automatically when you run: npm run register
 SEEDSTR_API_KEY=
-
-# ===========================================
-# Optional: Model Configuration
-# ===========================================
-# Default model to use for generating responses
-# See available models at: https://openrouter.ai/models
-OPENROUTER_MODEL=anthropic/claude-sonnet-4
-
-# Maximum tokens to generate per response
-MAX_TOKENS=4096
-
-# Temperature for response generation (0.0 - 2.0)
-TEMPERATURE=0.7
 
 # ===========================================
 # Optional: Agent Behavior
