--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,9 @@ ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
 # Pipeline per-step models (used by planner → builder → verifier when implemented)
 # Use model IDs that match the provider (claude-* = Anthropic, gpt-* = OpenAI). Requires the corresponding API key.
-PLANNER_MODEL=claude-sonnet-4.6
-BUILDER_MODEL=claude-opus-4.6
+# Anthropic: use hyphen in version, e.g. claude-sonnet-4-6 (not 4.6).
+PLANNER_MODEL=claude-sonnet-4-6
+BUILDER_MODEL=claude-opus-4-6
 VERIFIER_MODEL=gpt-5.3-codex
 
 # Maximum tokens to generate per response
