--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ npm-debug.log*
 # Test coverage
 coverage/
 
+# Generated project zips (simulate / local review)
+builds/
+
 # Temporary files
 tmp/
 temp/
