Update model configuration in .env.example and related files for improved clarity and defaults. Change planner and builder models to Claude Opus and Sonnet respectively, and enhance comments in the code to reflect these updates.

--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,12 @@ PRIMARY_PROVIDER=anthropic
 OPENAI_MODEL=gpt-4o
 ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
-# Pipeline per-step models (used by planner → builder → verifier when implemented)
-# Use model IDs that match the provider (claude-* = Anthropic, gpt-* = OpenAI). Requires the corresponding API key.
-# Anthropic: use hyphen in version, e.g. claude-sonnet-4-6 (not 4.6).
-PLANNER_MODEL=claude-sonnet-4-6
-BUILDER_MODEL=claude-opus-4-6
-VERIFIER_MODEL=gpt-5.3-codex
+# Pipeline per-step models (planner → builder → verifier). These are the only source of truth; no hardcoded defaults in code.
+# If unset, the primary provider's model (OPENAI_MODEL or ANTHROPIC_MODEL) is used for all steps.
+# Recommended: Opus for planning, Sonnet for builder and verifier. claude-* = Anthropic, gpt-* = OpenAI.
+PLANNER_MODEL=claude-opus-4-6
+BUILDER_MODEL=claude-sonnet-4-6
+VERIFIER_MODEL=claude-sonnet-4-6
 
 # Maximum tokens to generate per response
 MAX_TOKENS=4096
