Enhance text processing capabilities by decreasing speed from 40s to 8s

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ ANTHROPIC_MODEL=claude-sonnet-4-20250514
 PLANNER_MODEL=claude-opus-4-6
 BUILDER_MODEL=claude-sonnet-4-6
 VERIFIER_MODEL=claude-sonnet-4-6
+TEXT_RESPONSE_MODEL=gpt-4o
 
 # Maximum tokens to generate per response
 MAX_TOKENS=4096
