Update .env.example and related configuration files to introduce a fast builder model and define token limits for different complexity tiers. Enhance comments for clarity on model usage and project structure.

--- a/.env.example
+++ b/.env.example
@@ -23,14 +23,25 @@ ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
 # Pipeline per-step models (planner → builder → verifier). These are the only source of truth; no hardcoded defaults in code.
 # If unset, the primary provider's model (OPENAI_MODEL or ANTHROPIC_MODEL) is used for all steps.
-# Recommended: Opus for planning, Sonnet for builder and verifier. claude-* = Anthropic, gpt-* = OpenAI.
+# Recommended: Opus for planning, Sonnet for high-complexity builds, Haiku for fast low/medium builds.
+# claude-* = Anthropic, gpt-* = OpenAI.
 PLANNER_MODEL=claude-opus-4-6
 BUILDER_MODEL=claude-sonnet-4-6
+# Fast model for low/medium complexity (Haiku is ~4x faster than Sonnet; used automatically by the pipeline)
+BUILDER_FAST_MODEL=claude-haiku-4-5-20251001
 VERIFIER_MODEL=claude-sonnet-4-6
 TEXT_RESPONSE_MODEL=gpt-4o
 
 # Maximum tokens to generate per response
 MAX_TOKENS=4096
+
+# Builder token caps per complexity tier:
+#   low    → simple landing pages, static sites   (fast; ~8-20s builder time)
+#   medium → interactive sites, small apps        (balanced; ~20-40s builder time)
+#   high   → data apps, complex UIs               (quality; uses BUILDER_MODEL)
+BUILDER_LOW_MAX_TOKENS=8000
+BUILDER_MEDIUM_MAX_TOKENS=14000
+BUILDER_MAX_TOKENS=20000
 
 # Temperature for response generation (0.0 - 2.0)
 TEMPERATURE=0.7
